<?xml version="1.0"?>
<package format="2">
  <name>wr_hsi_camera</name>
  <version>0.0.0</version>
  <description>Reads data from cameras and shuffles it around.</description>
  <maintainer email="egeng@wisc.edu">E. Geng</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>theora_image_transport</build_depend>
  <build_depend>video_stream_opencv</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>theora_image_transport</build_export_depend>
  <build_export_depend>video_stream_opencv</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>theora_image_transport</exec_depend>
  <exec_depend>video_stream_opencv</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
